--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ button{
 	font-weight:bold;
 }
 .modal{
+	display:none;
 	position:fixed;
 	z-index:1;
 	left:0;
@@ -19,9 +20,7 @@ button{
 	overflow:auto;
 	background-color:rgba(0,0,0,0.2)
 }
-.modal:target{
-	display:block;
-}
+
 .modal-header{
 	padding:10px;
 	background-color:#007bff;
@@ -35,13 +34,11 @@ button{
 	padding:20px;
 	align-items:left;
 }
-.close-modal{
-	padding:5px;
-	cursor:pointer;
-	font-weight:bold;
-	font-size:21px;
-	color:white;
-	text-decoration:none;
+.close-modal:hover,
+.close-modal:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 @keyframes fadeIn{
 	from{opacity:0; transform:translateY(-20px);}
